--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -9,3 +9,13 @@
 body {
   background: rgba(10, 10, 10, 1);
 }
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
